--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,9 +1,9 @@
 \chapter[Summary]{Summary}
 \label{sec:conclusions}
 
-In this thesis the muon deficit problem was approached by three different fronts.
+In this thesis the muon deficit problem was approached in three different fronts.
 In~\cref{sec:interpretation,sec:observable} we presented simulation studies aiming
-the development of methods to be applied in the analysis of measurements of
+to the development of methods to be applied in the analysis of measurements of
 future experiments with the presence of muon detectors, which includes AugerPrime.
 In~\cref{sec:hadron} we presented the measurements of hadron production spectra
 in pion-carbon interactions by \NASixtyOne experiment. The importance of these type
@@ -26,7 +26,7 @@ These scenarios should predict the energy evolution of the abundance of differen
 groups of primaries (Sec. 4 of \cref{sec:interpretation}).
 The next and final step is to compare the measurements of \lgnmumean and \lgnmurms
 with the prediction of the model considering different composition scenarios. The comparison
-is performed by a \cchi parameter for \lgnmumean and \lgnmurms separately an the free parameters of the model
+is performed by a \cchi parameter for \lgnmumean and \lgnmurms separately and the free parameters of the model
 are used then to minimize the \cchi. The minimum values of the \cchi (\chiminalpha and \chiminbeta)
 can be compared for different composition scenarios and the true scenario can be identified by the smallest
 values (Sec. 5 of \cref{sec:interpretation}).
