--- a/hadron.tex
+++ b/hadron.tex
@@ -35,7 +35,7 @@ relevant for EAS physics and muon production.
 The analysis presented in this chapter can be essentially
 split in two parts. One of them is dedicated to the
 measurements of the \pions, \kaons and
-\protonpm\footnote{Along this text protons and anti-protons will
+\protonpm\footnote{Throughout this text protons and anti-protons will
   eventually be represented by p$^+$ and p$^-$}
 spectra and the other to the \lambs and \kzeros spectra. The former
 will be labeled along the text as the \emph{charged hadron analysis}
@@ -352,8 +352,9 @@ the event selection for the data and simulation sets.
       \DPMJetLong                   & 3.89$\times10^6$     & 3.46$\times10^6$ \\
       \QGSJetLong                   & 3.56$\times10^6$     & 2.95$\times10^6$ \\ \hline
     \end{tabular}
+
     \small Source: By the author. 
-  \end{center}
+ \end{center}
 \end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -614,7 +615,7 @@ and the \dedx fit presented in~\cref{sec:hadron:dedx:model,sec:hadron:dedx:fit}.
 \subsection[\dedx model]{\boldmath \dedx model}
 \label{sec:hadron:dedx:model}
 
-To perform the \dedx fit , a model to describe the \dedx distributions
+To perform the \dedx fit, a model to describe the \dedx distributions
 of different particle types as a function of their
 momenta is required. While experiments like
 ALICE~\cite{\AlicePaper} and CMS~\cite{\CMSPaper} opt
@@ -1486,6 +1487,7 @@ the signal extraction results in~\cref{sec:hadron:vzero:results}.
       \kzeros          & 0.4976 & $\pi^+$+$\pi^-$      & 69.2$\%$  \\ \hline
     \end{tabular}
     \label{tab:hadron:vzero:part}
+
     \small Source: By the author. 
   \end{center}
 \end{table}
@@ -2015,6 +2017,7 @@ on the systematic uncertainties in~\cref{sec:hadron:spec:syst}.
       Average     & 0.897     & 0.771 \\ \hline
     \end{tabular}
     \label{tab:hadron:alpha}
+
     \small Source: By the author. 
 \end{center}
 \end{table}
@@ -2190,7 +2193,7 @@ Concerning the feed-down from weak decays on the \vzero particle
 spectra, the effect is null for \kzeros and can reach up to 25\%
 for \lambs, in which the decaying particles are mostly $\Xi^{\pm}$, $\Xi^0$,
 $\Omega^\pm$ (and their anti-particles). The model dependencies are also
-significant in this case and it will be account for
+significant in this case and it will be accounted for
 on the systematic uncertainties of the spectra (see~\cref{sec:hadron:spec:syst}).
 
 
@@ -2788,7 +2791,7 @@ in $\pi^{-}$-C interactions. Although most of muons are
 produced by the decay of \pions, we can see in plots
 (a) and (b) from~\cref{fig:hadron:spec:dedx:int158,fig:hadron:spec:dedx:int350}
 that there is a great agreement between data and models,
-and therefore, no significant improve on the muon
+and therefore, no significant improvement on the muon
 production simulations is expected due to our \pions spectra.  
 The only model that shows not to be consistent
 with the \pions spectra is \DPMJetLong, which overproduce
