--- a/introduction.tex
+++ b/introduction.tex
@@ -33,7 +33,7 @@ region ($E>\E{17}$), where two spectrum features are observed: the \emph{ankle},
 which is a softening of the flux around $4\times\E{18}$ and the \emph{suppression},
 which is an abrupt reduction of the flux above $4\times\E{19}$.
 Most questions about the nature of the UHECR are still opened,
-and in particular, the actual nature of the ankle and the suppression is still
+and in particular, the actual nature of the ankle and the suppression are still
 a matter of discussions.
 
 Measuring the properties of UHECR is the main goal of the largest
@@ -41,7 +41,7 @@ cosmic ray experiment ever built, the Pierre Auger Observatory,
 located in Malargue, Argentina, and operating since 2004.~\cite{\AugerPaper}
 While its large collecting area (3000 km$^2$) guarantee a large
 event statistics, its hybrid detection system that includes
-surface detectors and fluorescence telescopes can provide a
+surface detectors and fluorescence telescopes can provide
 precise measurements of the properties of the EAS.
 An overview of the current status of the UHECR field
 and an introduction to the Pierre Auger Observatory
@@ -51,9 +51,9 @@ The precise inference of the properties of UHECR
 from EAS measurements requires a deep understanding
 of these objects. The most complete modeling of EAS is
 achieved by means of Monte Carlo simulations.
-Among the possible sources of uncertainties related to the
+Among the known sources of uncertainties related to the
 simulation of EAS, the main one is the modeling
-of the hadronic interactions. 
+of hadronic interactions. 
 Because of the phenomenological nature of the hadronic interaction models,
 they are tuned to accelerator measurements
 and a number of problems with this process originate a substantial
@@ -75,7 +75,7 @@ to inconsistent results. To be more precise, the \nmu observed is systematically
 larger than the ones predicted by EAS simulations using hadronic interaction
 models. Although this is traditionally known as \emph{muon deficit problem},
 further EAS measurements have shown
-that the simulations also fail to predict other properties of the muonic component.
+that simulations also fail on predicting other properties of the muonic component.
 As a direct consequence, measurements of muonic observables cannot be
 properly used to infer cosmic ray composition.  
 An overview of the EAS physics, simulations and a summary of measurements
@@ -86,7 +86,7 @@ In this thesis, the problem of describing the properties of the muonic component
 by simulations is approached from an experimental perspective by three different fronts.
 The first one is presented in~\cref{sec:interpretation},
 where the Ref.~\cite{Prado:2016akv} is reproduced,
-and it consists of the development of a method to interpret the energy evolution
+and it consists in the development of a method to interpret the energy evolution
 of the measured \nmu moments in terms of mass composition which takes into account
 the misprediction of the \nmu by the simulations. The method is tested by using
 a set of simulations and it is expected to be applicable for the analysis
@@ -106,8 +106,8 @@ could provide an efficient way to constrain hadronic models.
 The third front, presented in~\cref{sec:hadron},
 is the data analysis of the fixed target experiment \NASixtyOne
 at CERN Super Proton Synchrotron~\cite{\NASixtyOnePaper},
-aiming the measurements of hadron production spectra
-in $\pi$-C interactions. These measurements are valuable for the understanding of the muon
+aiming at the measurements of hadron production spectra
+in $\pi^-$-C interactions. These measurements are valuable for the understanding of the muon
 production in EAS (see~\cref{sec:showers}) and they are an important part of
 the cosmic ray physics programee of \NASixtyOne experiment.
 A preliminary stage of this work can be found in Ref.~\cite{\RaulICRC}.
