--- a/resumo.tex
+++ b/resumo.tex
@@ -29,7 +29,8 @@ O objetivo desta tese \'e abordar este problema atrav\'es de tr\^es frentes. Pri
 um m\'etodo \'e desenvolvido para interpretar as medidas do n\'umero de muons em termos
 de composi\c{c}\~ao de raios c\'osmicos considerando o problema do d\'eficit de m\'uons.
 Segundo, a proposta e o teste de um observ\'avel que \'e sens\'ivel ao espectro de energia dos m\'uons
-na superf\'icie e, consequentemente, pode ser usado para constrair os modelos de intera\c{c}\~ao hadr\^onica.
+na superf\'icie e, consequentemente, pode ser usado para discriminar entre
+os modelos de intera\c{c}\~ao hadr\^onica.
 Por \'ultima, a produ\c{c}\~ao de m\'uons em chuveiros \'e estudada atrav\'es
 de medidas do espectro de produ\c{c}\~ao de hadrons em intera\c{c}\~oes do tipo p\'ion-carbono.
 
