--- a/showers.tex
+++ b/showers.tex
@@ -92,7 +92,7 @@ On the other hand, the length scale of pair production is of the same order
 of $X_0$, only slightly larger ($\approx 1.3 X_0$). Because of the short length scale
 given by $X_0$, the electromagnetic shower develops very rapidly, which
 implies a fast increase of the number of particles and a fast decrease of their
-average energy. As lower the energies of the particles, more relevant are the energy losses
+average energy. The lower the energies of the particles, more relevant are the energy losses
 due to ionization. The critical energy in which the ionization losses
 becomes equivalent to the bremstralung ones is $E_c = 85 \MeV$ in the
 atmosphere. After the average energy of electrons becomes of the order of $E_c$,
@@ -147,7 +147,7 @@ The quantity $D_{10} = \text{d}\xmaxmean/\text{d} \log_{10}E_0$
 is called \emph{elongation rate} and it does not depend on $E_0$ and $A$.
 Although the~\cref{eq:shower:xmax} is derived by simplistic analytic models~\cite{Matthews:2005sd},
 it can be certified by using full Monte Carlo simulations that this relation is valid
-in very good approximation.
+to a very good approximation.
 
 On the left plot of~\cref{fig:shower:phen:xmax}
 we show the \xmaxmean as a function of the primary energy
@@ -235,7 +235,7 @@ can keep interacting and producing more hadrons. The hadrons
 produced by this chain of hadronic interactions compose the
 hadronic component of the shower.
 
-As lower the energy of the charged pions, larger the probability
+The lower the charged pions energies, larger the probability
 that they decay instead of interacting again. The dominant decay channel
 for charged pions is into muons and neutrinos
 ($\pi^+\rightarrow\mu^++\nu_\mu$ and $\pi^-\rightarrow\nu^-+\bar{\nu}_\mu$)
@@ -248,7 +248,7 @@ decaying into muons is 4-8.~\cite{Meurer:2005dt}
 Apart from pion decays, a considerably fraction of the muons reaching
 the ground is produced by the decay of charged kaons.
 In Refs.~\cite{Meurer:2005dt,MeurerThesis} the muon
-production in EAS was studied in details and it was found
+production in EAS was studied in detail and it was found
 by using simulations that $\sim 90\%$ of the muons come from the decay
 of charged pions and $\sim 10\%$ of charged kaons. While these particles
 are called \emph{mother}, the particles which interacted hadronically
@@ -307,7 +307,7 @@ a new observable to be used for that considering experiments with
 two different muon detectors.
 
 
-On the left plot of~\cref{fig:shower:phen:prof}
+On the right plot of~\cref{fig:shower:phen:prof}
 we show the average longitudinal profile of
 the number of muons, as well as the muon production,
 for proton and iron initiated showers. First we can see that the
@@ -391,7 +391,7 @@ structure of the atmosphere with changing density
 and the earth magnetic field also have to be taken into account.
 Furthermore, the extremely large number of particles at high energies makes
 the computational cost of an EAS simulation extremely large.
-Because of that, the full simulation turns to be
+Because of that, the full simulation turns out to be
 impossible for practical purposes and, thus, special strategies
 have to be developed by simulation softwares to reduce the complexity
 of the problem.
@@ -450,7 +450,7 @@ similar to \Conex or \Seneca.
 The models used to describe the hadronic interactions at high energies 
 are by far the most relevant source of uncertainties on the prediction of
 EAS observables by simulations. Although the strong interactions can be
-successfully described by the \emph{quantum cromodynamics} theory (QCD),
+successfully described by \emph{quantum cromodynamics} (QCD),
 we are still not able to compute the bulk of hadronic particle production processes
 from first principles. 
 
@@ -479,7 +479,7 @@ for describing EASs.
 The problem with the model tuning can be split in three parts.
 First, the highest energy collisions studied in accelerators
 ($\sqrt{s} = 13$ \TeV reached by LHC) is still much lower
-energy than the interaction of a high energy cosmic ray ($\sqrt{s}\approx 400$ for
+energy than the interaction of a high energy cosmic ray ($\sqrt{s}\approx 400$ \TeV for
 a \E{20} primary proton). Second, there is a lack of measurements
 of particle production at the forward region, which is the most relevant
 to understand particle production in soft interactions and also
@@ -592,7 +592,7 @@ Observatory in Ref.~\cite{Aab:2014aea}.
 \begin{figure}[!ht]
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{xmax_auger_icrc}
+  \begin{overpic}[clip, rviewport=0 0 0.98 1,width=0.99\textwidth]{xmax_auger_icrc}
     \put(18,60){}
   \end{overpic}
   
@@ -609,10 +609,10 @@ Observatory in Ref.~\cite{Aab:2014aea}.
 \begin{figure}[!ht]
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.4\textwidth]{xmax_mean_ta}
+  \begin{overpic}[clip, rviewport=0 0 0.93 1,width=0.49\textwidth]{xmax_mean_ta}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.4\textwidth]{xmax_sig_ta}
+  \begin{overpic}[clip, rviewport=0 0 0.93 1,width=0.49\textwidth]{xmax_sig_ta}
     \put(18,60){}
   \end{overpic}
 
@@ -660,7 +660,7 @@ by the fits of \xmax distributions shown in Ref.~\cite{Aab:2014aea}.
 The Telescope Array data, on the other hand, shows a constant composition
 which is dominantly light, between proton and helium nuclei on average, from \E{18.2}
 up to the highest energies. This apparent inconsistency has been studied
-by a working group formed of members of both collaboration and the most recent
+by a working group formed of members of both collaborations and the most recent
 conclusion is that, taking into account the detector effects intrinsic of the Telescope Array
 measurements and all the systematic uncertainties, the results of Telescope Array
 are actually compatible with the composition inferred from Auger data up to \E{19}.~\cite{VitorICRC2017}
@@ -686,14 +686,14 @@ level.
 To be able to detect isolated muons, the detectors are usually shielded so the
 electromagnetic component is absorbed before reaching being detected. This can
 be done either by placing a layer of a heavy material on the top of the detector
-or by burying it few meters below the ground level. It turns out that low energetic muons
+or by burying it few meters below the ground level. It turns out that low energy muons
 also end up being absorbed, and as a consequence, each experiment measures
 muons above a different energy threshold and the \nmu is different.
 The lateral distance range in which the muons are detected is also
 a specific feature of each experiment that affects strongly the \nmu. Since
 the experiments are always made of granular arrays, the distance between the detectors
 usually determine in which lateral distance the \nmu is estimated. Lastly,
-the observation level of the experiment affects the \nmu because of the atmospheric attenuation,
+the observation level of the experiment affects \nmu because of the atmospheric attenuation,
 which affects much strongly the electromagnetic component, but it is still relevant for
 muon detection.
 
@@ -707,7 +707,7 @@ MIA.~\cite{\MIAPaper} The surface detectors were formed by scintilator counters
 buried about 3 m below the ground level, which implies in an energy threshold for muons
 of around 850 \MeV. The density of muons at a lateral
 distance of 600 m ($\rho_\mu(600)$) was reconstructed and compared to simulations.
-On the left plot of~\cref{fig:shower:observables:nmu} we reproduce
+On the top-left plot of~\cref{fig:shower:observables:nmu} we reproduce
 the plot of $\rho_\mu(600)$ as a function of the primary energy as published
 in Ref.~\cite{\HiResMIAMuonPaper}.
 By comparing the measured muon density with predictions from Monte Carlo simulations,
@@ -722,32 +722,34 @@ in 1999.
 \begin{figure}[!ht]
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.3\textwidth]{hires_mia_muons}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.47\textwidth]{hires_mia_muons}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 -0.12 1 1,width=0.35\textwidth]{icetop_muons}
+  \begin{overpic}[clip, rviewport=0 -0.06 1 1,width=0.47\textwidth]{has_nmu}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 -0.06 1 1,width=0.3\textwidth]{has_nmu}
+
+  \begin{overpic}[clip, rviewport=0 0 1 1.05,width=0.6\textwidth]{icetop_muons}
     \put(18,60){}
   \end{overpic}
-  
-  \caption{Muon density as measured by HiRes/MIA (left)~\cite{\HiResMIAMuonPaper}
-    and IceTop (middle)~\cite{\IceTopMuonPaper} and number of muons as measured by Pierre Auger Observatory
-    in highly inclined showers (right).~\cite{\AugerHASMuonPaper}}
+
+  \caption{Muon density as measured by HiRes/MIA (top-left)~\cite{\HiResMIAMuonPaper}
+    and IceTop (bottom)~\cite{\IceTopMuonPaper} and number of muons as measured by Pierre Auger Observatory
+    in highly inclined showers (top-right).~\cite{\AugerHASMuonPaper}}
   \label{fig:shower:observables:nmu}
 
   \begin{center}
-    \small Source: ABU-ZAYYAD.(left)~\cite{\HiResMIAMuonPaper};DEMBINSKI.(middle)~\cite{\IceTopMuonPaper};AAB.(right)~\cite{\AugerHASMuonPaper} 
+    \small Source: ABU-ZAYYAD.(top-left)~\cite{\HiResMIAMuonPaper};DEMBINSKI.(bottom)~\cite{\IceTopMuonPaper};AAB.(top-right)~\cite{\AugerHASMuonPaper} 
   \end{center}
 \end{figure}
+
 
 The second measurement to be presented was performed
 by IceTop detector~\cite{\IceTopPaper}, part of the IceCube experiment~\cite{\IceCubePaper},
 by using ice-Cherenkov surface detectors.
 The primary energy range of these measurements goes from \E{15} to \E{17}
 and the density of muons at 600 and 800 m from the shower axis was estimated
-as muon content observable. On the middle plot of~\cref{fig:shower:observables:nmu}
+as muon content observable. On the bottom plot of~\cref{fig:shower:observables:nmu}
 we reproduce the result from the Ref.~\cite{\IceTopMuonPaper}
 which shows the $\rho_\mu$ as a function of energy compared to simulation predictions
 by using the \SibyllNewLong as hadronic interaction model.
@@ -759,12 +761,12 @@ even by using modern hadronic interaction models like \SibyllNewLong.
 
 The third and final measurement presented here is
 the one performed by Pierre Auger Observatory.~\cite{\AugerPaper}
-Even that its standard surface array
+Even though its standard surface array
 does not contain muon detectors, the number of muons can be measured by Auger
 in highly inclined showers ($\theta > 60^\circ$). For this type of showers
 the electromagnetic component is almost totally attenuated by the atmosphere
 and the signal at the water-Cherenkov tanks is dominated by muons.
-On the right plot of~\cref{fig:shower:observables:nmu} we show the
+On the top-right plot of~\cref{fig:shower:observables:nmu} we show the
 average \nmu as measured by Auger compared
 to simulations as published in Ref.~\cite{\AugerHASMuonPaper}.
 The primary energy range here is above \E{18.6} and the muon deficit is clear
@@ -800,7 +802,7 @@ KASCADE-Grande collaboration has studied the evolution
 of the \nmu with the zenith angle of the shower by using
 a parameter called muon attenuation length ($\Lambda_\mu$). 
 Since the atmospheric attenuation of the muonic component
-depends on the energy of muons, the parameter $\Lambda_\mu$ turns to
+depends on the energy of muons, the parameter $\Lambda_\mu$ turns out to
 be sensitive to the muon energy spectra. Thus, by comparing the measurements
 to Monte Carlo predictions it is possible to test muon production
 properties of the hadronic interaction models. On the left plot of~\cref{fig:shower:observables:further1}
@@ -880,10 +882,10 @@ consistent composition inferences can be done.
 \begin{figure}[!ht]
   \centering
   
-  \begin{overpic}[clip, rviewport=0 -0.03 1 1,width=0.44\textwidth]{asymmetry_auger}
+  \begin{overpic}[clip, rviewport=0 -0.03 0.95 1,width=0.48\textwidth]{asymmetry_auger}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.48\textwidth]{delta_auger}
+  \begin{overpic}[clip, rviewport=0.05 0 0.96 1,width=0.50\textwidth]{delta_auger}
     \put(18,60){}
   \end{overpic}
 
@@ -950,17 +952,18 @@ The upper plot refers to the hadronic model \EposLHCLong, while the lower one to
 \begin{figure}[!ht]
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.48\textwidth]{lna_epos}
+  \begin{overpic}[clip, rviewport=0 0.14 1 1,width=0.85\textwidth]{lna_epos}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.48\textwidth]{lna_qgsjet}
+
+  \begin{overpic}[clip, rviewport=0 0 1 0.98,width=0.85\textwidth]{lna_qgsjet}
     \put(18,60){}
   \end{overpic}
   
   \caption{$\langle\ln A\rangle$ as a function of energy for a set of
     observables measured by Pierre Auger Observatory. Only statistical uncertainties
     are shown. The hadronic interaction
-    models \EposLHCLong (left) and \QGSJetLong (right) to perform the convertion
+    models \EposLHCLong (top) and \QGSJetLong (bottom) to perform the convertion
     represented by~\cref{eq:shower:lna}.}
   \label{fig:shower:observables:lna}
 
