--- a/uhecr.tex
+++ b/uhecr.tex
@@ -58,17 +58,17 @@ these two components is currently one of the most active topics of discussion.
 
 Because of the steepness of the spectrum, the particle flux changes over 27 orders of magnitude
 from \e{11} to \E{21}. As indicated in~\cref{fig:uhecr:overview:spec:swordy},
-while at \E{11} the flux is about one particle/m$^2$/second,
-at \E{19} it drops to only one particle/km$^2$/year.
+while at \E{11} the flux is about one particle per m$^2$ per second,
+at \E{19} it drops to only one particle per km$^2$ per year.
 As a consequence, different experimental techniques have to be applied to detect
 cosmic ray particles at different energy ranges. Up to \appE{14}, the high flux
 allows us to use small area instruments installed in balloons or satellites
-to detects the particles before they interact with the Earth's atmosphere.
-Above this energy, the interaction with the atmosphere turns to be
-useful since we can measure the cosmic rays indirectly through the detection of
+to detect the particles before they interact with the Earth's atmosphere.
+Above this energy, the interaction with the atmosphere turns out to be
+necessary since we can measure the cosmic rays indirectly through the detection of
 the extensive air showers (see~\cref{sec:showers}). For that, large arrays of detectors
 are used and their areas can vary substantially depending on the energy range they are
-intended to be sensitive. As an example, the KASCADE experiment~\cite{\KASCADEPaper}
+intended to be sensitive to. As an example, the KASCADE experiment~\cite{\KASCADEPaper}
 is designed to measure particles from around \e{14} to \E{16}
 and it has an area of 4000 m$^2$, while the Pierre Auger
 Observatory~\cite{\AugerPaper} has an area of 3000 km$^2$ to measure particles above \E{18}.
@@ -151,11 +151,11 @@ including iron nuclei.~\cite{Apel:2011mi,Apel:2013uni}
 \begin{figure}
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{kascade_spec}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.95\textwidth]{kascade_spec}
     \put(18,60){}
   \end{overpic}
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.8\textwidth]{kascade_grande_spec}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.95\textwidth]{kascade_grande_spec}
     \put(18,60){}
   \end{overpic}
   
@@ -205,7 +205,7 @@ where $\beta = v/c$ and $v$ is the velocity of magnetic cloud.
 Because of this second power of $\beta$, this mechanism is
 called \emph{second order Fermi mechanism}.
 
-A similar but more efficient mechanism was developed almost
+A similar but more efficient mechanism was proposed almost
 two decades later.~\cite{Axford1977,Krymsky1977,Bell:1978zc,Blandford:1978ky}
 The main idea of this mechanism is that charged particles collide with multiple shock waves
 and they gain energy by interacting with irregularities in the magnetic field.
@@ -319,7 +319,7 @@ the energy threshold is given by the condition that the center-of-mass energy
 has to be larger than the rest mass of the pion. From~\cref{fig:uhecr:propagation:attenuation} it is clear
 that photopion production processes dominate the proton energy
 losses at energies above $\approx 8\times\E{19}$,
-and, as a consequence, it is expected the proton spectrum to be strongly
+and, as a consequence, it is expected that the proton spectrum be strongly
 suppressed around this energies.
 This effect was proposed in 1966 by Greisen~\cite{Greisen:1966jv},
 Zatsepin and Kuzmin~\cite{Zatsepin:1966jv}, and it is known as the \emph{GZK suppression}.
@@ -351,7 +351,7 @@ to the particle deflections by magnetic fields. It is possible to show that
 heavier nuclei are so strongly deflected that their arrival direction does not contain
 information about the direction of the astrophysical source. On the other hand,
 since protons above $\approx\E{19}$ are only slightly deflected, in this pure-proton
-scenario would be possible to use the arrival directions to infer the sources distribution.
+scenario it would be possible to use the arrival directions to infer the sources distribution.
 
 
 %%%%%%%%%%%%%% GZK HORIZON %%%%%%%%%%%%%%%
@@ -378,7 +378,7 @@ One can see that photodisintegration dominates the energy losses over
 electron pair production or photopion production at all the energies.
 Because of photodisintegration, the resultant effect of the propagation of a
 combination of different nuclei on the energy spectrum
-turns to be more complicated to evaluate than in the proton case. However,
+turns out to be more complicated to evaluate than in the proton case. However,
 it is possible to show that for a mixed composition case,
 the energy spectrum would also suffer a suppression at the highest energies,
 mainly due to photodisintegration effects for heavy nuclei and photopion production for the light ones.
@@ -477,7 +477,8 @@ Concerning the suppression, the two currently most considered hypothesis
 to explain it are the GZK effect (see~\cref{sec:uhecr:overview:propagation})
 and the limit of the acceleration power by the sources. While in the GZK hypothesis
 the composition can be either pure proton or mixed,
-the source limit hypothesis imply in a rigidity dependent suppression and consequently an increasingly heavier
+the source limit hypothesis implies
+in a rigidity dependent suppression and consequently an increasingly heavier
 composition as the energy increases. Similarly to what happened to the dip model
 interpretation of the ankle, the composition measurements by HiRes
 supported the GZK hypothesis for many years,
@@ -496,7 +497,7 @@ that the suppression is not caused only by GZK effect with a pure proton composi
 has negative consequences, like the absence of correlation with nearby sources due to the deflection of
 heavy nuclei in magnetic fields and the absence of the GZK horizon.
 Those facts motivated the authors of Ref.~\cite{Aloisio:2011fv}
-to call this generic scenario of \emph{disappointing model}.
+to name this generic scenario as \emph{disappointing model}.
 
 In a recent analysis done by Pierre Auger Collaboration,
 the measured spectrum and the \xmax distributions were
@@ -516,7 +517,7 @@ of the end of the cosmic ray spectrum.
 \begin{figure}
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.9\textwidth]{combined_fit}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.98\textwidth]{combined_fit}
     \put(18,60){}
   \end{overpic}
   
@@ -572,8 +573,6 @@ can be found in Ref.~\cite{\AugerPaper}.
     
 \end{figure}
 
-%%HERE SOURCE
-
 The standard surface detector (SD) is composed by a set of $\sim 1660$
 water-Cherenkov detectors (WCD) which are regularly arranged in a triangular grid.
 The nearest neighbor distance of the stations for the standard array,
@@ -588,7 +587,7 @@ particle through the water. For that, three photomultiplier tubes (PMT) are inst
 on the top of each station and their signal are extracted and digitized using
 flash analog-to-digital converters (FADC)
 with a sampling rate of 40 MHz. Since the SD operation does not
-require any special environmental condition, its duty cycle turns to be very
+require any special environmental condition, its duty cycle turns out to be very
 close to 100\%.
 More details about the SD can be found in Ref.~\cite{Allekotte:2007sf}.
 
@@ -600,7 +599,7 @@ were part of the original project of the observatory and they are designed to me
 the fluorescence light emitted by the atmosphere during the development of air showers
 with primary energies above approximately \E{18}. Another set of 3 telescopes
 that can operate with a vertical field of view going from \dg{30} to \dg{60}
-was later installed in one the buildings.
+was later installed in one of the buildings.
 This enhancement is called HEAT~\cite{Mathes:2011zz} and it is
 designed to extend the lower limit of the fluorescence measurements to approximately \E{17}.
 In~\cref{fig:uhecr:auger:array}
@@ -640,10 +639,10 @@ muons and the final FD energy ($E_\text{FD}$) is then obtained.
 \begin{figure}
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{auger_long_profile}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.49\textwidth]{auger_long_profile}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{auger_lat_dist}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.49\textwidth]{auger_lat_dist}
     \put(18,60){}
   \end{overpic}
   
@@ -696,10 +695,10 @@ the SD energy from the $S_{38}$ parameter.
 \begin{figure}
   \centering
   
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{auger_cic}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.49\textwidth]{auger_cic}
     \put(18,60){}
   \end{overpic}
-  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.45\textwidth]{auger_calibration}
+  \begin{overpic}[clip, rviewport=0 0 1 1,width=0.49\textwidth]{auger_calibration}
     \put(18,60){}
   \end{overpic}
   
@@ -746,7 +745,7 @@ and evidences of anisotropy in the arrival directions
 of cosmic rays with $E>\E{19}$ which indicates correlation with
 nearby extragalactic sources.~\cite{Aab:2018chp} Even though these recent results
 represent a great progress on the understanding of the nature and origin
-of UHECRs, some of the main questions remain still opened.
+of UHECRs, some of the main questions remain opened.
 
 An important piece of information to be provided experimentally that
 is still missing is the mass composition of cosmic rays above $3 \times \E{19}$.
