--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
 	pdfkeywords={ultra high energy cosmic rays}{extensive air showers}{muons}, 
 	colorlinks=true,       		% false: boxed links; true: colored links
 	linkcolor=blue,          	% color of internal links
-	citecolor=blue,        		% color of links to bibliography
+	citecolor=red,        		% color of links to bibliography
 	filecolor=magenta,      		% color of file links
 	urlcolor=blue,
 	bookmarksdepth=4
