--- a/showers.tex
+++ b/showers.tex
@@ -33,7 +33,7 @@ particles and so on. This succession of interactions with secondary production
 creates the cascade of particles that forms the EAS.
 For the sake of clarity, the description of the cascade is traditionally
 done by splitting it into different components: the \emph{electromagnetic},
-the \emph{hadronic} and, eventually, the \emph{muonic component}. It is also traditional
+the \emph{hadronic} and, possibly, the \emph{muonic component}. It is also traditional
 to describe the EAS development in terms of its longitudinal and lateral profiles.
 The former refers to the shower development along the direction of its axis
 while the latter refers to the distribution of particles
