--- a/uhecr.tex
+++ b/uhecr.tex
@@ -267,7 +267,7 @@ generically called \emph{top-down models}, assume that
 the particles are not accelerated by astrophysical objects, but instead they are the products
 of the decay of exotic super-massive particles. The origin of these exotic particles
 could be, for example, topological defects from early Universe phase transitions
-of dark matter. As a prediction of nearly all these models, a significant flux of
+or dark matter. As a prediction of nearly all these models, a significant flux of
 ultra-high energy photons should be observed. However, measurements  
 of Pierre Auger Observatory have shown that the upper limits of the photon flux is significantly lower than
 the predictions~\cite{Aglietta:2007yx} and, therefore, the top-down hypothesis can be ruled out.
@@ -438,8 +438,9 @@ of systematic uncertainties in the primary energy estimation.
 
 
 The most precise inferences of the composition of cosmic rays
-at this energy range are based on the \xmax measurements
-performed by fluorescence telescopes.
+at this energy range are based on the \xmax\footnote{\xmax is defined as the longitudinal
+  depth in which the EAS reachs its maximum number of particles.}
+measurements performed by fluorescence telescopes.
 In~\cref{sec:shower:observables}, we present a detailed discussion about
 the \xmax measurements, its composition interpretation, as well as
 further measurements of air shower observables that could, in principle,
@@ -471,7 +472,9 @@ around and above the ankle. Although at the time of the model proposal
 this composition assumption seemed to be fulfilled by the \xmax measurements
 of HiRes experiments~\cite{\HiResXmaxPaper},
 recent measurements of Pierre Auger Observatory
-have proven it wrong.~\cite{\AugerXmaxPRLPaper}
+have proven that the composition is actually
+heavier than proton at ankle energies and above~\cite{\AugerXmaxPRLPaper},
+which makes the dip model widely disbelieved by the UHECR community.
 
 Concerning the suppression, the two currently most considered hypothesis
 to explain it are the GZK effect (see~\cref{sec:uhecr:overview:propagation})
@@ -658,7 +661,7 @@ muons and the final FD energy ($E_\text{FD}$) is then obtained.
 
 The SD reconstruction is based on the size and the times of signals registered
 by the individual stations. The geometry of the shower is first determined
-by fitting the time of the signals assuming a spherical shape for the shower front.
+by fitting the time of the signals assuming a parabolic shape for the shower front.
 After obtaining the shower geometry it is possible to evaluate the lateral distribution,
 which is basically the evolution of the station signals with the distance to the
 shower axis. On the right plot of~\cref{fig:uhecr:auger:rec}
