--- a/USPSC-pre-textual-IFSC.tex
+++ b/USPSC-pre-textual-IFSC.tex
@@ -5,7 +5,8 @@
 \unidade{INSTITUTO DE F\'ISICA DE S\~AO CARLOS}
 \unidademin{Instituto de F\'isica de S\~ao Carlos}
 \universidademin{Universidade de S\~ao Paulo}
-\notafolharosto{Original Version}
+\notafolharosto{Corrected version \\(Original version available on the Program Unit)}
+%\notafolharosto{Original Version}
 %Para versão original em inglês, comente do comando/declaração 
 %     acima(inclua % antes do comando acima) e tire a % do 
 %     comando/declaração abaixo no idioma do texto
@@ -15,7 +16,6 @@
 %     e tire a % do comando/declaração de um dos comandos 
 %     abaixo em conformidade com o idioma do texto
 %\notafolharosto{Vers\~ao corrigida \\(Vers\~ao original dispon\'ivel na Unidade que aloja o Programa)}
-%\notafolharosto{Corrected version \\(Original version available on the Program Unit)}
 
 % ---
 % dados complementares para CAPA e FOLHA DE ROSTO
